# podcast-editing-cli

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  pyproject.toml  state.json
daily/: 2026-04-29.md
github/: pull-1.json  pull-2.json
src/podcast/: __init__.py  autoedit.py  cli.py  fcpxml.py  overlays.py  transcriber.py
tests/: test_overlays.py
