[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podcast-cli"
version = "0.1.0"
description = "CLI toolkit for podcast transcription and auto-editing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "numpy>=1.24",
    "whisper-mps",
]

[project.scripts]
podcast = "podcast.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/podcast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
